[package]
name = "betterls"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/izhaan-raza/betterls"

[dependencies]
clap = { version = "4.5.39", features = ["derive"]}
owo-colors = "4.2.1"
strum = { version = "0.27", features = ["derive"]}
tabled = "0.20.0"
chrono = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
