[package]
name = "betterls"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/izhaan-raza/betterls"

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
owo-colors = "4.2.1"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
chrono = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each release
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Allow manual edits to the GitHub workflow file without CI failing
allow-dirty = ["ci"]
