[package]
name = "betterls"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Izhaan-Raza/betterls"

# Define this as a workspace containing just this package
[workspace]
members = ["."]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
owo-colors = "4.2.1"
strum = { version = "0.27", features = ["derive"] }
tabled = "0.20.0"
chrono = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.30.2"
ci = ["github"]
installers = ["shell", "powershell"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
pr-run-mode = "plan"
allow-dirty = ["ci"]
